@@ -2,6 +2,7 @@ glFusion ChangeLog
 
 v1.2.1.svn
 ----------
+- submit.php was not providing new edit=x parameter to plugins (now uses both)
 - Calendar: Add permission check to auto tags (mark)
 - FileMgmt: Add permission check to auto tags (mark)
 - Staticpages: Add permission check to auto tags (mark)
